--- a/AppServSalud/src/main/resources/static/styles/main.css
+++ b/AppServSalud/src/main/resources/static/styles/main.css
@@ -100,19 +100,21 @@ footer {
   position: relative;
   width: 200px;
   height: 200px;
+}
 
-  .imagen-redonda {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
-
+.imagen-redonda {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--color-bordes);
 }
 
 #contenedor-imagen-formulario {
   position: relative;
   width: 200px;
   height: 200px;
+  border-radius: 50%;
+  box-shadow: 1.5px 2px 4px #0000005b;
 
   .etiqueta-icono {
     display: block;
