agregue links, testimonio, quienes somos, cambie fotos, agregue el insta, agregue mediya en el form registrarse, modifique el colspan y el texto de usuario por turnos de turnopacientes y corregi un metodo del portal controlador

--- a/AppServSalud/src/main/resources/templates/especialidades.html
+++ b/AppServSalud/src/main/resources/templates/especialidades.html
@@ -28,7 +28,7 @@
                         >
                             <div class="card tarjetas-especialidad">
                                 <img
-                                    th:src="@{/assets/cardiologia.jpg}"
+                                    th:src="@{/assets/cardiologia1.jpg}"
                                     alt="..."
                                     class="card-img-top"
                                     style="max-height: 145px;"
@@ -64,7 +64,7 @@
                         >
                             <div class="card tarjetas-especialidad">
                                 <img
-                                    th:src="@{/assets/profSalud.jpg}"
+                                    th:src="@{/assets/medicoclinico.jpg}"
                                     alt="..."
                                     class="card-img-top"
                                     style="max-height: 145px;"
@@ -140,7 +140,7 @@
                         >
                             <div class="card tarjetas-especialidad">
                                 <img
-                                    th:src="@{/assets/ginecologia.jpg}"
+                                    th:src="@{/assets/ginecologa1.jpg}"
                                     alt="..."
                                     class="card-img-top"
                                     style="max-height: 145px;"
