--- a/AppServSalud/src/main/resources/templates/fragments/footer.html
+++ b/AppServSalud/src/main/resources/templates/fragments/footer.html
@@ -35,7 +35,7 @@
           >
         </a>
         <a
-          href="https://www.instagram.com/"
+          href="https://www.instagram.com/nosdicenmediya"
           target="_blank"
           class="link-underline link-underline-opacity-0"
         >
