--- a/AppServSalud/src/main/resources/templates/turnosPaciente.html
+++ b/AppServSalud/src/main/resources/templates/turnosPaciente.html
@@ -36,8 +36,8 @@
                 </tbody>
                 <tbody th:if="${turnos == null || turnos.isEmpty}">
                     <tr>
-                        <td colspan="6">
-                            <p>No se encuentran usuarios activos en este momento</p>
+                        <td colspan="9" style="width: 100%;">
+                            <p>No se encontraron turnos activos en este momento</p>
                         </td>
                     </tr>
                 </tbody>
