--- a/AppServSalud/src/main/resources/static/styles/index.css
+++ b/AppServSalud/src/main/resources/static/styles/index.css
@@ -91,7 +91,7 @@
 
 #trabaja-con-nosotros-2{
   height: 400px;
-  background-image: url("../assets/trabaja-con2.jpg");
+  background-image: url("../assets/portadatrabajo.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -108,7 +108,7 @@
   line-height: normal;
   letter-spacing: 0.1px;
   text-align: center;
-  color: white;
+  color: rgb(252, 252, 252);
   margin-bottom: 30px;
 }
 
@@ -161,7 +161,7 @@
   text-align: center;
   color: white;
   display: none;
-  transition: all 0.5s ease;
+  transition: all 0.1s ease;
 }
 
 .imagenes-circulares:hover>div{
@@ -195,6 +195,46 @@
   line-height: normal;
   letter-spacing: 0.1px;
   text-align: center;
-  color: white;
+  color: rgb(17, 17, 17);
   margin-bottom: 30px;
+}
+
+#testimonios>p{
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  margin: 30px;
+
+}
+
+#sobrenosotros{
+  background-color: rgba(102, 82, 190, 0.308);
+  padding: 40px 0px;
+  width: 100%;
+  height: 250px;
+  display: grid;
+  place-content: center;
+  border-radius: 50px;
+  
+}
+#sobrenosotros>h2{
+  font-family: Roboto;
+  font-size: 40px;
+  font-weight: 400;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.1px;
+  text-align: center;
+  color: rgb(7, 39, 6);
+  margin: 10px;
+
+}
+
+#sobrenosotros>p{
+  margin: 40px;
+  font-size: 20px;
 }
