--- a/AppServSalud/src/main/resources/templates/forms/registroPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/registroPaciente.html
@@ -14,7 +14,7 @@
                 method="POST"
             >
                 <div class="text-center mb-5">
-                    <h3 class="card-title">Registrate en Hospital House</h3>
+                    <h3 class="card-title">Registrate en MediYa!</h3>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-lg-5">
